--- a/templates/awesome/index.html.twig
+++ b/templates/awesome/index.html.twig
@@ -1,20 +1,32 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AwesomeController!{% endblock %}
+{% block title %}Hello AwesomeControoooooooooller!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>/home/jb/myproject/biblios/src/Controller/AwesomeController.php</code></li>
-        <li>Your template at <code>/home/jb/myproject/biblios/templates/awesome/index.html.twig</code></li>
-    </ul>
-</div>
+    <!-- Header-->
+        <header class="bg-primary bg-gradient text-white py-5 mt-5" style="top: 40px;">
+            <div class="container px-4 text-center">
+                <h1 class="fw-bolder">Biblios</h1>
+                <p class="lead">Catalogue en ligne de la médiathèque de Trifouillis-les-Oies</p>
+                <a class="btn btn-lg btn-light" href="#about">Start scrolling!</a>
+            </div>
+        </header>
+        <!-- About section-->
+        <section class="py-5 bg-light" id="services">
+            <div class="container px-4">
+                <div class="row gx-4 justify-content-center">
+                    <div class="col-lg-8">
+                        <h2>Biblios: qu'est-ce que c'est ?</h2>
+                        <p class="lead">Biblios est la plateforme officielle de consultation du catalogue de la médiathèque de Trifouillis-les-Oies. Explorez notre collection avec une recherche efficace, vérifiez la disponibilité des ouvrages en temps réel, et effectuez des réservations en toute simplicité. Biblios s'engage pour faciliter l'accès à la culture et promouvoir la richesse de notre patrimoine littéraire.</p>
+                        <p class="lead">Fonctionnalités clés :</p>
+                        <ul>
+                            <li>Recherche avancée de livres</li>
+                            <li>Consultation en temps réel du statut des ouvrages (disponible, emprunté, indisponible)</li>
+                            <li>Affichage détaillé des informations sur les livres</li>
+                            <li>Processus de réservation simplifié</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
 {% endblock %}
