Add Doctrine and create Entity with Maker

--- a/templates/awesome/index.html.twig
+++ b/templates/awesome/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AwesomeControoooooooooller!{% endblock %}
+{% block title %}Hello AwesomeControooooooller!{% endblock %}
 
 {% block body %}
     <!-- Header-->
