--- a/templates/admin/author/new.html.twig
+++ b/templates/admin/author/new.html.twig
@@ -16,6 +16,7 @@
     {{ form_row(form.dateOfDeath) }}
     {{ form_row(form.nationality) }}
     {{ form_row(form.books) }}
+    {{ form_row(form.certification) }}
     <button type="submit" class="btn btn-primary">Envoyer</button>
     {{ form_end(form) }}
     
