--- a/templates/admin/author/index.html.twig
+++ b/templates/admin/author/index.html.twig
@@ -1,20 +1,31 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AuthorController!{% endblock %}
+{% block title %}Liste d'auteurs{% endblock %}
 
 {% block body %}
 <style>
     .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
 </style>
 
 <div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+    <h1>Liste d'auteurs</h1>
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code>/home/jb/myproject/biblios/src/Controller/Admin/AuthorController.php</code></li>
-        <li>Your template at <code>/home/jb/myproject/biblios/templates/admin/author/index.html.twig</code></li>
+    <ul class="list-group list-group-flush">
+        {% for author in authors %}
+            <div class="card mb-1">
+                <div class="card-body">
+                    <div class="card-title d-flex justify-content-around">
+                        <a href="{{ path('app_admin_author_show', {id: author.id}) }}" class="stretched-link link-dark">
+                            <h4 class="mb-1">{{ author.name }}</h4>
+                        </a>
+                        <span class="text-muted">Identifiant : {{ author.id }}</span>
+                    </div>
+                </div>
+            </div>
+            {% else %}
+                <li>Aucun enregistrement en BD</li>
+        {% endfor %}
     </ul>
+    {{ pagerfanta(authors) }}
 </div>
 {% endblock %}
