--- a/templates/book/index.html.twig
+++ b/templates/book/index.html.twig
@@ -9,28 +9,33 @@
     body {background-color: whitesmoke}
 </style>
 
-<div class="example-wrapper">
-    <section class="py-5">
-        <div class="container px-4 px-lg-5 mt-5">
+<section class="py-5">
+    <section class="container px-4 px-lg-5 mt-5">
+        <section class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
             {% for book in books %}
-            <div class="col mb-5">
-                <div class="card h-100">
-                    {{ book.cover }}
-                </div>
-                <div class="card-body p-4">
-                    <div class="text-center">
-                        <h5 class="fw-bolder">{{ book.title }}</h5>
-                    </div>
-                </div>
-                <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
-                    <div class="text-center">
-                        <a href="{{ path('app_book_show', {id: book.id}) }}"></a>
-                    </div>
-                </div>
-            </div>
+                <section class="col mb-5">
+                    <section class="card h-100">
+                        <img src="{{ asset('uploads/images/' ~ book.cover) }}" alt="Cover">
+                        <section class="card-body p-4">
+                            <section class="text-center">
+                                <h5 class="fw-bolder">{{ book.title }}</h5>
+                            </section>
+                        </section>
+                        <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
+                            <div class="text-center">
+                                {% for a in book.authors %}
+                                    <h3>{{ a.name }}</h3>
+                                {% endfor %}
+                            </div>
+                            <div class="text-center">
+                                <a class="btn btn-outline-dark mt-auto" href="{{ path('app_book_show', {id: book.id}) }}">Voir</a>
+                            </div>
+                        </div>
+                    </section>
+                </section>
             {% endfor %}
-        </div>
+        </section>
     </section>
+</section>
 {#    {{ pagerfanta(books) }}#}
-</div>
 {% endblock %}
