--- a/templates/book/show.html.twig
+++ b/templates/book/show.html.twig
@@ -4,28 +4,43 @@
 
 {% block body %}
     <style>
-        .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
+    body{background-color: whitesmoke}
     </style>
-
-    <div class="example-wrapper">
-
-        <h1>Livre : </h1>
         {% if book is not null %}
-            <div class="card mb-1 m-auto">
-                <div class="card-body">
-                    <div class="card-title d-flex justify-content-between">
-                        <h4 class="mb-1">{{ book.title }}</h4>
-                        <small class="text-muted">Identifiant : {{ book.id }}</small>
-                    </div>
-                    <div class="d-flex justify-content-between card-text">
-                        <ul class="list-group list-group-flush">
-                            <li class="list-group-item">Couverture : {{ book.cover }}</li>
-                            <li class="list-group-item">Date d'édition : {{ book.editedAt|date('d M Y') }}</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <a href="{{ path('app_book') }}" class="btn btn-primary">Retour</a>
+            <section class="py-5">
+                <section class="container px-4 px-lg-5 my-5">
+                    <section class="row gx-4 gx-lg-5 align-items-center">
+                        <section class="col-md-6">
+                            <img src="{{ asset('uploads/images/' ~ book.cover) }}" class="card-img-top mb-5 mb-md-0" alt="Cover">
+                        </section>
+                        <section class="col-md-6">
+                            <div class="small mb-1">ISBN: {{ book.isbn }}</div>
+                            <h1 class="display-5 fw-bolder">{{ book.title }}</h1>
+                            <div class="fs-5">
+                                <span>Auteur(s): {{ book.authors|map(a => a.name)|join(', ') }}</span>
+                            </div>
+                            <div class="fs-5">
+                                <span>Éditeur: {{ book.editor.name }}</span>
+                            </div>
+                            <div class="fs-5">
+                                <span>{{ book.pageNumber }}{{ book.pageNumber is not null ? ' pages' }}</span>
+                                <span> - {{ book.editedAt|date('d M Y') }}</span>
+                            </div>
+                            <div class="fs-5 mb-5">
+                                <span>Statut: {{ book.status.getLabel() }}</span>
+                            </div>
+                            <p class="lead">{{ book.plot }}</p>
+                            <div class="d-flex">
+                                <a href="{{ path('app_book') }}">
+                                    <button class="btn btn-outline-dark flex-shrink-0" type="button">
+                                        Retour à la liste
+                                    </button>
+                                </a>
+                            </div>
+                        </section>
+                    </section>
+                </section>
+            </section>
         {% else %}
             <div>Livre non trouvé</div>
         {% endif %}
